2017-05-31  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Do not pass -Wno-expansion-to-defined to Clang <4.0.0
        https://bugs.webkit.org/show_bug.cgi?id=172750

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsCommon.cmake:

2017-05-31  Adrian Perez de Castro  <aperez@igalia.com>

        Consider enabling -Wno-expansion-to-defined for gcc 7
        https://bugs.webkit.org/show_bug.cgi?id=167643

        Reviewed by Žan Doberšek.

        * Source/cmake/OptionsCommon.cmake: Pass -Wno-expansion-to-defined to
        GCC, the flag is supported all the way back to version 4.9, which is
        the oldest we support

2017-05-26  Don Olmstead  <don.olmstead@am.sony.com>

        [CMake] Wrap CODE_GENERATOR_PREPROCESSOR_EXECUTABLE on Windows hosts
        https://bugs.webkit.org/show_bug.cgi?id=172553

        Reviewed by Brent Fulgham.

        * Source/cmake/OptionsCommon.cmake:

2017-05-26  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Pass -fdiagnostics-color=always to GCC when building with Ninja
        https://bugs.webkit.org/show_bug.cgi?id=172638

        Reviewed by Yusuke Suzuki.

        The oldest version of GCC supported for building WebKit is 4.9, which already accepts
        -fdiagnostics-color=, therefore it is not needed to check the compiler version.

        * Source/cmake/OptionsCommon.cmake:

2017-05-25  Don Olmstead  <don.olmstead@am.sony.com>

        [CMake][Win] Use WTF_CPU not MSCV_CXX_ARCHITECTURE_ID when determining lib directories
        https://bugs.webkit.org/show_bug.cgi?id=172570

        Reviewed by Per Arne Vollan.

        * Source/cmake/OptionsWin.cmake:

2017-05-24  Don Olmstead  <don.olmstead@am.sony.com>

        [CMake] Consolidate CMake code related to Cairo
        https://bugs.webkit.org/show_bug.cgi?id=172568

        Reviewed by Alex Christensen.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake: