@@ -28,9 +28,7 @@ elseif ("${PORT}" STREQUAL "WPE")
         add_subdirectory(ImageDiff)
         add_subdirectory(WebKitTestRunner)
     endif ()
-endif ()
-
-if (WIN32)
+elseif ("${PORT}" STREQUAL "Win")
     add_subdirectory(DumpRenderTree)
     add_subdirectory(TestWebKitAPI)
     add_subdirectory(MiniBrowser/win)
