@@ -115,6 +115,10 @@ if (isAppleWinWebKit()) {
     $ftlJIT = 0;
 }
 
+if (isJSCOnly() && isWindows()) {
+    (system("perl Tools/Scripts/update-webkit-wincairo-libs") == 0) or die;
+}
+
 checkRequiredSystemConfig();
 setConfiguration();
 chdirWebKit();
