@@ -1,3 +1,12 @@
+2017-06-02  Stephan Szabo  <stephan.szabo@am.sony.com>
+
+        [JSCOnly] Build static jsc.exe on Windows
+        https://bugs.webkit.org/show_bug.cgi?id=172833
+
+        Reviewed by Konstantin Tokarev.
+
+        * Source/cmake/OptionsJSCOnly.cmake:
+
 2017-05-31  Adrian Perez de Castro  <aperez@igalia.com>
 
         [CMake] Do not pass -Wno-expansion-to-defined to Clang <4.0.0
